--- a/Mandelbrot-Image/Mandelbrot-Image.vcxproj
+++ b/Mandelbrot-Image/Mandelbrot-Image.vcxproj
@@ -18,6 +18,24 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Bitmap.h" />
+    <ClInclude Include="BitmapFile.h" />
+    <ClInclude Include="BitmapInfo.h" />
+    <ClInclude Include="FractalCreator.h" />
+    <ClInclude Include="Mandelbrot.h" />
+    <ClInclude Include="RGB.h" />
+    <ClInclude Include="Zoom.h" />
+    <ClInclude Include="ZoomList.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Bitmap.cpp" />
+    <ClCompile Include="FractalCreator.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mandelbrot.cpp" />
+    <ClCompile Include="RGB.cpp" />
+    <ClCompile Include="ZoomList.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{05865659-1BA3-4668-B5B6-9514E1FB7362}</ProjectGuid>
@@ -85,6 +103,9 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
+    <Link>
+      <SubSystem>Console</SubSystem>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -112,10 +133,9 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
